--- a/web/public/app/index.html
+++ b/web/public/app/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="publicApp">
+  <body ng-app="one-linsersApp">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -57,6 +57,9 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/vendor/jquery.svg.js"></script>
+        <script src="scripts/vendor/jquery.svgdom.js"></script>
+        <script src="scripts/vendor/sketch.js"></script>
         <!-- endbuild -->
 </body>
 </html>
