--- a/web/app/index.html
+++ b/web/app/index.html
@@ -53,6 +53,8 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/jquery-mobile/js/jquery.mobile.js"></script>
+    <script src="bower_components/svg.js/dist/svg.js"></script>
+    <script src="bower_components/svg.draggable.js/svg.draggable.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
