波線を引けるようになった。

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -53,6 +53,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/svg.js/dist/svg.js"></script>
     <script src="bower_components/svg.draggable.js/svg.draggable.js"></script>
+    <script src="bower_components/svg.math.js/svg.math.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
