--- a/web/app/index.html
+++ b/web/app/index.html
@@ -52,7 +52,6 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/svg.js/dist/svg.js"></script>
-    <script src="bower_components/svg.draggable.js/svg.draggable.js"></script>
     <script src="bower_components/svg.math.js/svg.math.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
@@ -63,7 +62,7 @@
         <script src="scripts/vendor/jquery.svg.js"></script>
         <script src="scripts/vendor/jquery.svgdom.js"></script>
         <script src="scripts/vendor/sketch.js"></script>
-        <script src="scripts/vendor/drag-and-drop.js"></script>
+        <script src="scripts/vendor/svg.draggable.js"></script>
         <!-- endbuild -->
 </body>
 </html>
