--- a/web/app/index.html
+++ b/web/app/index.html
@@ -64,6 +64,7 @@
         <script src="scripts/vendor/jquery.svgdom.js"></script>
         <script src="scripts/vendor/sketch.js"></script>
         <script src="scripts/vendor/svg.draggable.js"></script>
+        <script src="scripts/services/drawingservice.js"></script>
         <!-- endbuild -->
 </body>
 </html>
