--- a/web/app/index.html
+++ b/web/app/index.html
@@ -19,13 +19,13 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <body id="content" ng-app="one-linsersApp">
+  <body ng-app="one-linsersApp">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="container" ng-view="" data-role="page"></div>
+    <div id="content" class="container" ng-view="" data-role="page"></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
