--- a/web/app/index.html
+++ b/web/app/index.html
@@ -52,16 +52,14 @@
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/svg.js/dist/svg.js"></script>
-    <script src="bower_components/svg.math.js/svg.math.js"></script>
+    <script src="bower_components/svg.js/dist/svg.min.js"></script>
+    <script src="bower_components/svg.math.js/svg.math.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/vendor/jquery.svg.js"></script>
-        <script src="scripts/vendor/jquery.svgdom.js"></script>
         <script src="scripts/vendor/sketch.js"></script>
         <script src="scripts/vendor/svg.draggable.js"></script>
         <script src="scripts/services/drawingservice.js"></script>
