--- a/web/app/index.html
+++ b/web/app/index.html
@@ -52,8 +52,7 @@
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/svg.js/dist/svg.min.js"></script>
-    <script src="bower_components/svg.math.js/svg.math.min.js"></script>
+    <script src="bower_components/svg.js/dist/svg.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -61,6 +60,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/vendor/sketch.js"></script>
+        <!--<script src="scripts/vendor/svg.math.js"></script>-->
         <script src="scripts/vendor/svg.draggable.js"></script>
         <script src="scripts/services/drawingservice.js"></script>
         <!-- endbuild -->
