--- a/web/app/index.html
+++ b/web/app/index.html
@@ -7,7 +7,8 @@
     <meta charset="utf-8">
     <title></title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <!-- <meta name="viewport" content="width=device-width,target-densitydpi=device-dpi, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=0.5">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
@@ -60,7 +61,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/vendor/sketch.js"></script>
-        <!--<script src="scripts/vendor/svg.math.js"></script>-->
+        <script src="scripts/vendor/svg.math.js"></script>
         <script src="scripts/vendor/svg.draggable.js"></script>
         <script src="scripts/services/drawingservice.js"></script>
         <!-- endbuild -->
