--- a/web/app/index.html
+++ b/web/app/index.html
@@ -72,6 +72,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/jquery-ui/jquery-ui.js"></script>
     <script src="bower_components/svg.js/dist/svg.js"></script>
+    <script src="bower_components/svg-pan-zoom/dist/svg-pan-zoom.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
