web: 写真を縮小しないよう修正中。hammerjsを使うよう修正中。

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -73,6 +73,7 @@
     <script src="bower_components/jquery-ui/jquery-ui.js"></script>
     <script src="bower_components/svg.js/dist/svg.js"></script>
     <script src="bower_components/svg-pan-zoom/dist/svg-pan-zoom.js"></script>
+    <script src="bower_components/hammerjs/hammer.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
