web: ダブルタップでWebViewがズームしないようにuser-scale=0を指定。

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, user-scalable=0">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
@@ -85,6 +85,9 @@
         <script src="scripts/vendor/svg.math.js"></script>
         <script src="scripts/vendor/svg.draggable.js"></script>
         <script src="scripts/vendor/sketch.js"></script>
+        <!-- <script src="scripts/vendor/hammer.js"></script> -->
+        <script src="scripts/services/debug.js"></script>
+        <script src="scripts/services/greeting.js"></script>
         <!-- endbuild -->
 </body>
 </html>
